<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.ui.login.LoginFragment">

        <include layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            tools:layout_editor_absoluteX="4dp"
            app:layout_constraintBottom_toTopOf="@+id/login">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="128dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/border_indigo"
                android:hint="@string/prompt_pseudo"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                android:textColorHint="@color/blackHint"
                android:textSize="20sp"
                android:autofillHints="username"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/border_indigo"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/black"
                android:textColorHint="@color/blackHint"
                android:textSize="20sp"
                android:autofillHints="password"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="220dp"
                android:layout_marginTop="5dp"
                android:text="Mot de passe oublié ?" />

            <Button
                android:id="@+id/login"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="48dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="150dp"
                android:background="@drawable/arround_corners_cyan"
                android:contentDescription="@string/bouton_connexion"
                android:enabled="false"
                android:text="Se connecter"
                android:textColor="#000000"
                android:textColorHint="#A11E1E"
                app:rippleColor="#AC1313" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Vous n'avez toujours pas de compte sur Book2Road ? N'hésitez pas à vous inscrire" />

            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/arround_corners_indigo"
                android:text="@string/bouton_inscription"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>